<resources>
    <string name="app_name">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="goodbye_world">Goodbye World</string>
    <string name="todo">TODO</string>
    <string name="hello_world">Hello World</string>
    <string name="button">Button</string>
    <string name="todol">TODOL</string>
    <string name="goodbye_worldd">Goodbye World!</string>
</resources>
